--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ body {
     box-sizing: border-box;
     font-family: system-ui;
 } 
-
+/* setting website colors */
 :root{
     /* Colors */
     --light-color: #F8F7F7;
@@ -102,6 +102,9 @@ body{
 a {
         text-decoration: none;
 }
+
+/* declaring rules the primary button used throughout site */
+
 .primary-button {
         cursor: pointer;
         border: none;
@@ -170,7 +173,7 @@ a {
     padding: 0 var(--gutter);
 }
 
-/* Header */
+/* Header styling */
 
 .header {
     display: flex;
@@ -189,7 +192,8 @@ a {
 }
 
 
-/* Home Page */
+/* Home Page styling */
+/* Hero section styling */
 .hero-section {
     height: 100vh; /* Full screen */
     background-image: url(../img/Hero_BG_4.png);
@@ -234,6 +238,7 @@ a {
     font-weight: 700;
 }
 
+/* Homepage-  hero responsive styling  */
 @media screen and (max-width: 1200px) {
     .hero-section {
          flex-direction: column;
@@ -252,7 +257,7 @@ a {
     justify-content: center;
 }
 
-/* Removing bullets and adding padding inbetween each item.*/
+/* Homepage - Removing bullets and adding padding inbetween each item.*/
 .navbar li {
 list-style: none;
 padding: 0 40px;
@@ -272,7 +277,7 @@ position: relative;
     color: var(--medium-green-color);
 }
 
-/* Pseudo classes for underlines on hover of page links */
+/* Homepage - Pseudo classes for underlines on hover of page links */
 .navbar li a.active::after,
 .navbar li a:hover::after {
     content: "";
@@ -284,7 +289,7 @@ position: relative;
     left: 41px;
 }
 
-/* ABOUT US section */
+/* Homepage - ABOUT US section sttyling */
 .about-us {
     background-color: var(--light-color);
 }
@@ -298,7 +303,7 @@ position: relative;
     color: var(--dark-grey);
 }
 
-/* Memberships section */
+/* Homepage - Memberships section styling */
 .memberships {
     position: relative;
     min-height: 700px;
@@ -370,8 +375,7 @@ position: relative;
      }
  }
 
-
-/* Footer */
+/* Global Footer styling */
 
 .footer {
 background-color: var(--dark-grey-color);
@@ -391,7 +395,7 @@ footer .logo {
 }
 
 /* Memberships page */
-
+/* Memberships header styling */
 .memberships-page {
     position: relative;
     min-height: 800px;
@@ -442,7 +446,7 @@ footer .logo {
 }
 
 /* Gym Page */
-
+/* Gym header section styling */
 .gym-page {
     position: relative;
     min-height: 800px;
@@ -493,7 +497,7 @@ footer .logo {
 }
 
 /* Whats on Page */
-
+/* Whats on header section styling */
 .what-page {
     position: relative;
     min-height: 800px;
@@ -504,7 +508,6 @@ footer .logo {
     align-items: center;
     z-index: -2
 }
-
 .what-page::after {
     content: "";
     display: block;
@@ -516,7 +519,7 @@ footer .logo {
     margin: auto;
     z-index: -1;
     background-color: rgba(0,0,0,0.7);
-    }
+}
 
 .what-page-content {
     position: relative;
@@ -545,10 +548,10 @@ footer .logo {
 
 
 /* About page */
-
+/* About header section styling */
 .about-us-page {
     position: relative;
-    min-height: 700px;
+    min-height: 800px;
     background-image: url(../img/about-us-gym.jpg);
     background-size: cover;
     background-position: center;
@@ -581,13 +584,11 @@ footer .logo {
     z-index: 999;
     color: var(--light-color);
 }
-
 .about-us-page-content p {
     width: 800px;
     align-items: center;
     text-align: center;
 }
-
 .about-us-page-content .line {
     width: 350px;
     height: 2px;
@@ -596,25 +597,29 @@ footer .logo {
     padding: 0 var(--gutter);
 }
 
+/* About - history section styling */
+
 .history {
     background-color: var(--light-color);
     color: var(--dark-grey);
 }
-
 .history img{
     border: 2px solid #666;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+/* About - meet the team section styling */
+
 .meet-the-team {
     background-color: var(--dark-color);
     color: var(--light-color);
 }
-
 .meet-the-team img{
     border: 2px solid #666;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
+
+/* About - location section styling */
 
 .location {
     background-color: var(--light-color);
@@ -632,6 +637,7 @@ footer .logo {
 
 
 /* Contact Page */
+/* Contact - header section styling */
 
 .contact-page-header {
     position: relative;
@@ -655,7 +661,7 @@ footer .logo {
     margin: auto;
     z-index: -1;
     background-color: rgba(0,0,0,0.7);
-    }
+}
 
 .contact-page-header-content {
     position: relative;
@@ -689,7 +695,6 @@ footer .logo {
 
 .contact-us .two-column {
     align-items: start;
-
 }
 
 .details-content {
@@ -698,6 +703,7 @@ footer .logo {
     width: 100%;
     color: var(--dark-grey);
 }
+
 .details-content .detail {
     display:flex;
     flex-direction: row;
@@ -707,10 +713,11 @@ footer .logo {
     color: var(--dark-grey);
 }
 
+/* Contact - form section styling */
+
 form {
     flex-basis: 50%;
 }
-
 
 .inputWrapper {
     display: flex;
@@ -718,7 +725,7 @@ form {
     gap: 20px;
     margin-top: 60px; 
     margin-left: 60px; 
-    }
+}
 
 .inputWrapper input {
     padding: 12px 16px; 
@@ -734,6 +741,8 @@ form {
 .address h1 {
     color: var(--light-colorcolor)
 }
+
+/* Contact - details section styling */
 
 .detailsWrapper {
     display: flex;
@@ -756,5 +765,3 @@ form {
 .detail h6 {
     color: var(--light-color)
 }
-
-
