--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,6 @@
 
+/* CSS Style sheet for Web Management And Development - M30875 - WEB PROJECT 1 - up2307500  */
+
 /*
 CSS RESET 
 SOURCE https://www.joshwcomeau.com/css/custom-css-reset/ 
